# segment-sort

./: .gitignore  ALGORITMO_DETALLADO.md  ALGORITMO_DETALLADO_CACHE.md  ANALYSIS_BLOCK_MERGE.md  CHANGELOG.md  GETTING_STARTED.md  HOW_I_BEAT_QSORT.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  README.md.OLD  README_ACTUALIZADO.md  ROADMAP.md  STRATEGIC_ROADMAP.md  benchmark_results_2025-11-06T13-30-41-683Z.json  benchmark_results_2025-11-07T11-47-26-006Z_seed1748607744.json  benchmark_results_2025-11-07T11-49-37-026Z_seed649431936.json  benchmark_results_2025-11-07T12-09-06-341Z_seed98464640.json  benchmark_results_2025-11-15T05-47-46-425Z_seed950334264.json  benchmark_results_2025-11-15T06-12-45-558Z_seed950334264.json  benchmark_results_2025-11-15T06-51-09-384Z_seed950334264.json  benchmark_results_2025-11-15T06-55-54-458Z_seed648174592.json  benchmark_results_2025-11-17T02-04-43-263Z_seed405532160.json  benchmark_results_2025-11-17T02-06-29-614Z_seed870191872.json  benchmark_results_c_1774102763.json  benchmark_results_c_1774105742.json  benchmark_results_clean_2025-11-18T21-19-47-448Z_seed1693894400.json  benchmark_results_js_2025-11-23T14-14-25-425Z_seed870191872.json  benchmark_results_js_2025-11-23T14-18-31-669Z_seed870191872.json  benchmark_results_js_2025-11-23T14-26-10-248Z_seed98464640.json  benchmark_results_js_2025-11-23T14-43-19-276Z_seed1693894400.json  benchmark_results_js_2025-11-23T14-43-31-370Z_seed1693894400.json  benchmark_results_js_2025-11-23T14-51-56-920Z_seed98464640.json  benchmark_results_js_2026-03-21T14-23-44-490Z_seed1353735168.json  benchmark_results_js_2026-03-21T14-48-26-972Z_seed1353735168.json  config.yml  on_the_fly_balanced_merge_sort_english.md  pyproject.toml  setup.py  (+2 more)
benchmarks/: BENCHMARK_COMPARISON_C_VS_JS.md  BENCHMARK_REPORT_APRIL_2026.md  (+72 more)
(+158 files in other folders)
